# lidar_odometry_ros_wrapper

./: .gitmodules  CMakeLists.txt  README.md
install/: local_setup.sh  setup.sh
install/lidar_odometry_ros/include/ceres/: autodiff_cost_function.h  autodiff_first_order_function.h  autodiff_local_parameterization.h  c_api.h  ceres.h  conditioned_cost_function.h  context.h  cost_function.h  cost_function_to_functor.h  covariance.h  crs_matrix.h  cubic_interpolation.h  dynamic_autodiff_cost_function.h  dynamic_cost_function.h  dynamic_cost_function_to_functor.h  dynamic_numeric_diff_cost_function.h  evaluation_callback.h  first_order_function.h  gradient_checker.h  gradient_problem.h  gradient_problem_solver.h  iteration_callback.h  jet.h  local_parameterization.h  loss_function.h  normal_prior.h  numeric_diff_cost_function.h  numeric_diff_options.h  ordered_groups.h  problem.h  rotation.h  sized_cost_function.h  solver.h  tiny_solver.h  tiny_solver_autodiff_function.h  tiny_solver_cost_function_adapter.h  types.h  version.h
install/lidar_odometry_ros/include/ceres/internal/: array_selector.h  autodiff.h  config.h  disable_warnings.h  eigen.h  fixed_array.h  householder_vector.h  integer_sequence_algorithm.h  line_parameterization.h  memory.h  numeric_diff.h  parameter_dims.h  port.h  reenable_warnings.h  variadic_evaluate.h
install/lidar_odometry_ros/lib/cmake/Ceres/: CeresConfig.cmake  CeresConfigVersion.cmake
install/lidar_odometry_ros/lib/lidar_odometry_ros/: lidar_odometry_node
install/lidar_odometry_ros/share/ament_index/resource_index/package_run_dependencies/: lidar_odometry_ros
install/lidar_odometry_ros/share/ament_index/resource_index/parent_prefix_path/: lidar_odometry_ros
install/lidar_odometry_ros/share/lidar_odometry_ros/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/lidar_odometry_ros/share/lidar_odometry_ros/cmake/: lidar_odometry_rosConfig-version.cmake  lidar_odometry_rosConfig.cmake
install/lidar_odometry_ros/share/lidar_odometry_ros/config/: kitti.yaml  lidar_odometry_ros.yaml
install/lidar_odometry_ros/share/lidar_odometry_ros/environment/: ament_prefix_path.dsv  path.dsv
install/lidar_odometry_ros/share/lidar_odometry_ros/launch/: lidar_odometry.launch.py
install/lidar_odometry_ros/share/lidar_odometry_ros/rviz/: lidar_odometry.rviz
launch/: lidar_odometry.launch.py
log/: latest_build
rviz/: lidar_odometry.rviz
src/: lidar_odometry_ros.cpp
